--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="container">
-        <audio id="bg-music" src="muzik.mp3" autoplay loop hidden></audio>
+        <audio id="bg-music" src="muzik.mp3" loop hidden></audio>
         <div class="heart">❤️</div>
         <div class="welcome">Hoş geldin, biricik eşim! Bu site sadece sana özel hazırlandı.</div>
         <h1>Eşime Kalpten Sevgiler</h1>
